# cpp-particle-sim-

./: CMakeLists.txt  LICENSE  README.md  confi.ini
include/: particle_sim.hpp
src/: Sim.cpp  main.cpp
